Update SDK tests so that they do not have a try-catch format - If an exception is thrown, just let the test fail. No need to catch it and fail the test manually